tests/fixtures/invalid/unclosed_brace.cyl
// Unclosed brace
fn main() {
    let x = 42;
